add related work chapter

--- a/2_abstract/en.tex
+++ b/2_abstract/en.tex
@@ -36,5 +36,5 @@ To perform the study
 \end{itemize}
 
 \MakeUppercase{images processing, intellectual video 
-processing, 
-video stabilization}
+processing, video 
+stabilization}
