add analysis of related work

--- a/4_overview/10_examples.tex
+++ b/4_overview/10_examples.tex
@@ -73,7 +73,6 @@ Bongsoo Suh, Eun Soo Choi} представили технологію \cite{sah
 відео займають тривалий час, не кажучи вже, що відео перед обробкою 
 піддають компресії.
 
-
 \begin{figure}[h]
   \centering
   \includegraphics[width=0.5\textwidth]{images/sah}
@@ -81,41 +80,38 @@ Bongsoo Suh, Eun Soo Choi} представили технологію \cite{sah
   \label{fig:sah}
 \end{figure}
 
+Головною особливістю даної роботи є те, що  алгоритм автоматично локалізує 
+різну кількість дошок. Однак варто відмітити, що тестування відбувалось на
+відеолекціях де камера знімає всю дошку і не рухається за викладачем. Тим більше
+якість отриманих написів теж погана.
 
-% Згодом ті ж автори розробили та використали у своїй роботі
-% стохастичний алгоритм Ньютона \cite{blanz:vetter:2003},
-% яким досягли реконструкції просторової конфігурації обличчя за 4.5 хвилини на
-% Pentium 4, 2GHz.
+\subsection{Виокремлення написів дошки від Тайванського університету}
 
-% Важливою деталлю цієї породжувальної моделі є те,
-% що кожна вершина різних моделей має однакове семантичне значення.
-% Краї очей, рота, кінчик носу, підборіддя та інші точки
-% знаходяться в однакових комірках масивів вершин моделей.
-% BFM розмічена опорними точками з наборів Farkas та MPEG4 FDP
-% (рис. \ref{fig:problems:feature-points}).
-% Відповідність точок дає змогу створювати власні множини опорних точок.
+У 2014 році науковці із Тайванського університету представили свій аналог \cite{yeh} 
+алгоритму по оцифровуванні дошки. Для видалення викладача автори застосували 
+алгоритм кластеризації K-means. Для отримання бінаризованих написів з дошки 
+використана адаптивне вирівнювання '(яке не ясно)'. Варто відмітити гарну
+якість власного методу знешумлення.
 
+\begin{figure}[h]
+  \centering
+  \begin{subfigure}[b]{0.3\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{images/yeh_1}
+  \end{subfigure}
+  \begin{subfigure}[b]{0.3\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{images/yeh_2}
+  \end{subfigure}
+  \label{fig:yeh}
+  \caption{Демонстрація роботи сканування дошки}
+\end{figure}
 
-% \subsection{Вітчизняна робота}
+Автори не представили швидкість обробки всього відео. Щоб отримати якісну сегментацію
+дошки та викладача потрібно, щоб кадр містив тільки викладача, причому щоб одяг викладача
+був сильно відмінним від кольору дошки.
 
-% У 2011 році Максим Тищенко,
-% випускник Національного технічного университету України
-% ``Київський політехнічний інститут'',
-% працюючи у Міжнародному науково-навчальному центрі
-% інформаційних технологій та систем над кандидатською дисертацією,
-% запропонував та запатентував
-% свій метод створення генеративної моделі обличчя та відновлення
-% тривимірної поверхні обличчя за одним або кількома фото \cite{tyshchenko:2011}.
-% Основні відмінності полягають у тому,
-% що задачу співставлення відповідних точок різних моделей
-% було представлено та розв'язано як супермодулярну
-% задачу розмітки \cite{Lovasz1983},
-% а нові моделі облич генеруються як зважене середнє.
-% Проте було наявне спрощення: самозатінення не бралося до уваги,
-% що дозволяло дуже швидко знаходити оптимальне освітлення
-% за пласкою моделлю затінення методом найменших квадратів.
-
-% \subsection{Сучасні роботи}
+\subsection{Сучасна робота}
 
 % На момент написання дисертації одними з новітніх робіт,
 % де було використано модель Базельського університету,
