update related works chapter

--- a/4_overview/10_examples.tex
+++ b/4_overview/10_examples.tex
@@ -109,24 +109,37 @@ Bongsoo Suh, Eun Soo Choi} представили технологію \cite{sah
 
 Автори не представили швидкість обробки всього відео. Щоб отримати якісну сегментацію
 дошки та викладача потрібно, щоб кадр містив тільки викладача, причому щоб одяг викладача
-був сильно відмінним від кольору дошки.
+був сильно відмінним від кольору дошки. Це потрібно для коректної роботи K-means.
+Тобто нема гарантії, що якийсь рухомий об'єкт не стане  дошкою під час класифікації.
 
 \subsection{Сучасна робота}
 
-% На момент написання дисертації одними з новітніх робіт,
-% де було використано модель Базельського університету,
-% є методи відстеження обличчя \cite{Saito2016}
-% та переносу виразу обличчя однієї людини іншій \cite{thies2016face}.
-% Докладніше про них буде сказано в наступному підрозділі.
-% Останньою відомою роботою
-% є Large Scale 3D Morphable Models \cite{Booth:2017}~---~це
-% генеративна модель обличчя, яка отримана з тривимірних знімків $10$ тисяч людей
-% різної статі, віку та раси, що робить її дуже різноманітною та корисною
-% (рис.~\ref{fig:problems:lsfm}).
+На даний момент найсучаснішою повною технологією \cite{davila:2017}, яка оцифровує дошку є робота
+науковців з університету Рочестер. Автори \textit{Kenny Davila та Richard Zanibbi}
+використали просторовий темпоралььний індекс для викремлення написів і викладача.
+Відбувається видалення не самого викладача,  а його контурів, після бінаризації картинки.
+Варто відмітити, що і тут камера має бути нерухомою.
 
-% \begin{figure}[h]
-%   \centering
-%     \includegraphics[width=0.9\textwidth]{images/lsfm}
-%   \caption{Приклади облич, що побудовані за допомогою LSFM}
-%   \label{fig:problems:lsfm}
-% \end{figure}
+\begin{figure}[h]
+  \centering
+  \begin{subfigure}[b]{0.3\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{images/davila_2017_1}
+  \end{subfigure}
+  \begin{subfigure}[b]{0.3\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{images/davila_2017_2}
+  \end{subfigure}
+  \label{fig:davila:2017}
+  \caption{Демонстрація роботи сканування дошки}
+\end{figure}
+
+Пізніше ціж автори створили повністю згорткову нейронну мережу \cite{davila:2021} для обробки написів дошки.
+Дана нейронна мережа LectureNet досить добре бінаризує написи з дошки.
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.5\textwidth]{images/davila_2021}
+  \caption{Приклад роботи авторів з Рочестер}
+  \label{fig:davila:2021}
+\end{figure}
