add problem chapter

--- a/4_overview/10_examples.tex
+++ b/4_overview/10_examples.tex
@@ -134,8 +134,8 @@ Bongsoo Suh, Eun Soo Choi} представили технологію \cite{sah
   \caption{Демонстрація роботи сканування дошки}
 \end{figure}
 
-Пізніше ціж автори створили повністю згорткову нейронну мережу \cite{davila:2021} для обробки написів дошки.
-Дана нейронна мережа LectureNet досить добре бінаризує написи з дошки.
+Пізніше ціж автори створили повністю згорткову нейронну мережу \cite{davila:2021}
+для обробки написів дошки.Дана нейронна мережа LectureNet досить добре бінаризує написи з дошки.
 
 \begin{figure}[h]
   \centering
@@ -143,3 +143,21 @@ Bongsoo Suh, Eun Soo Choi} представили технологію \cite{sah
   \caption{Приклад роботи авторів з Рочестер}
   \label{fig:davila:2021}
 \end{figure}
+
+
+\subsection{Кінцевий аналіз робіт}
+
+Як ми бачимо, всі вищеописані алгоритми є частковими (тобто не повністю вирішують всі проблеми
+з оцифруванням дошки): якісь методи опрацьовують тільки написи з дошки, 
+при чому досить непогано; якісь роблять панорамні знімки тільки з фотографій дошки.
+
+Спільними елементами вищеописаних алгоритмів-аналогів є використання 
+темпорального медіанного фільтру для видалення рухомих об'єктів.
+У даній роботі даний метод теж має місце, але вже для знешумлення
+вихідних слайдів, а не видалення лектора з відео.
+
+Найбільшими недоліками всіх аналогів є час обробки відео. Більшість технологій
+тестувались на відео поганої якості, наприклад 240р - 720р. 
+
+Також жоден метод не пропонує створювати панорамні знімки по мірі руху камери під
+час зйомки.і 
