--- a/4_overview/main.tex
+++ b/4_overview/main.tex
@@ -1,7 +1,6 @@
 \chapter{Аналіз попередніх робіт}
 \import{}{05_preface}
 \import{}{10_examples}
-% \import{}{20_problem}
-% \import{}{30_questions}
-% \import{}{40_solution}
-% \import{}{50_conclusion}
+\import{}{20_problem}
+% \import{}{30_solution}
+% \import{}{40_conclusion}
