--- a/4_overview/20_problem.tex
+++ b/4_overview/20_problem.tex
@@ -1,76 +1,45 @@
 \section{Постановка задачі}
 
-Спільною рисою методів, що дають добрі результати,
-є використання породжувальної моделі обличчя
-для виконання аналізу через синтез.
-Метою є мінімізація функції, що називається енергією.
-В першій роботі Бланца и Феттера \cite{blanz:romdhani:vetter}
-енергія складалася з
-суми квадратів різниць кольорів пікселів
-оригінального та синтезованого зображення,
-суми квадратів параметрів форми моделі обличчя,
-що мають стандартний нормальний розподіл,
-та суми квадратів відхилень параметрів камери від початкових значень,
-що визначалися людиною-оператором:
-\begin{equation}\label{eq:energy:blanz}
-  E_N\left( x, \theta \right)
-  = \sum_{i \in I' \subset I}
-      \frac{\left\| y_i \right\|^2}{\sigma^2_N}
-  + \sum_{j = 1}^{n} x_j^2
-  + \sum_{k = 1}^{m}
-      \frac{\left\| \theta^m - \hat{\theta}^m \right\|^2}
-           {\sigma^2_{\theta^m}}.
-\end{equation}
-Дисперсія $\sigma_N^2$ відповідає шуму на оригінальному зображенні.
-Зауважимо, що беруться не всі пікселі зображення,
-а тільки ті, що відповідають пікселям, де намальовано модель.
-Щоб кількість доданків завжди була однаковою,
-на кожній ітерації алгоритму випадковим чином
-обирається певна кількість трикутників
-з ймовірністю, що пропорційна до їх площі.
+Головними цілями даної роботи створити власну математичну
+модель на вхід якої буде даватись відео-лекція, а на вихід
+слайди з та побудувати її програмну реалізацію.
 
-Процедура мала наступний вигляд:
+Для одержання бажаних результатів було запропоновано
+вирішити такі проблеми:
 \begin{enumerate}
-  \item на перших кроках використовується модель
-    з меншою кількістю трикутників та вершин;
-  \item спочатку використовуються лише параметри камери
-    та найзначущі параметри моделі (перші головні компоненти),
-    потім поступово додаються нові компоненти;
-  \item спочатку дисперсія $\sigma_N^2$ обирається достатньо великою,
-    аби більше звертати увагу на грубіші відхилення,
-    а з кожною ітерацією її зменшують,
-    щоб отримувати все більш схожу модель.
+    \item Стабілізація кадрів;
+          Багато відео лекцій записуються не в найкращих умовах. 
+          Камера може випадково затруситися, якщо її прикріпити до столу
+          де студенти пишуть лекцію f,j або закріплена не стабільно, таким чином 
+          це заважає нормально слухати лекцію і фокусуватись на написах дошки.
+
+          *****Вставити  два кадри і різницю, щоб показати не стабілізоване відео
+    
+    \item Прибирання рухомих об'єктів;
+          Також однією з головних задач є видалення викладача з відео, оскільки
+          було поставлено за мету надавати користувачу чисті написи з дошки.
+          Є чимало варіантів як прибирати рухомі об'єкти. Можна локалізувати тільки 
+          людину, а можна і всі об'єкти, що рухаються в площині дошки. Маючи 
+          маску таких об'єктів ми матимемо змогу оновлювати з часом інформацію з дошки
+          яка була тимчасово перекрита.
+
+          *****Вставити кадр з маскою людини
+
+    \item Панорамні слайди;
+          Часто, коли дошки сильно об'ємні по площі камера знімає тільки ту частину де 
+          викладач щось пише. Під час лекції камеру переміщають так, щоб лектор був завжди 
+          в полі зору. Таким чином, якщо студент не встиг переписати все з однієї частини 
+          дошки, а камеру перемістили, то учень втрачає частину інформації. Було б добре 
+          мати слайди, які по мірі руху камери містили всю дошку.
+          
+          *****Всавити панорамну склейку кадрів
+
+    \item Написи з дошки;
+          Умови освітлення, розводи на дошці, неякісна зйомка, шуми - все це сильно впливає 
+          на сприйняття лекційного матеріалу. Непогано було б мати бінаризовані слайди без 
+          шумів та розводів тільки з написами як в записнику.
+
 \end{enumerate}
 
-У новітніх роботах для кращих результатів реконструкції використовуються
-додаткові відомості про обличчя~---~опорні точки.
-Знаходження особливих точок на зображенні голови
-являє собою окрему складну задачу.
-Одним з популярніших на даний час є метод, опублікований в статті
-``Вирівнювання обличчя за одну мілісекунду'',
-що використовується в бібліотеці з відкритим кодом dlib \cite{Kazemi:2014}.
-Результати, що дає алгоритм, можна побачити на рис. \ref{fig:problems:dlib}.
-\begin{figure}[h]
-  \centering
-    \includegraphics[width=0.9\textwidth]{images/dlib}
-  \caption{Приклади знаходження опорних точок обличчя}
-  \label{fig:problems:dlib}
-\end{figure}
 
-Також популярним є евристичний підхід,
-який полягає у використанні зміщеної оцінки дисперсії
-замість суми квадратів відхилень.
-Це дозволяє брати різну кількість точок на кожній ітерації.
-Нова цільова функція має вигляд
-\begin{equation}\label{eq:energy:face2face}
-  E\left( x, \theta \right)
-  = \omega_c \cdot \sum_{i \in I' \subset I} \frac{y_i^2}{\left| I' \right|}
-  + \omega_r \cdot \sum_{j = 1}^{n} x_j^2
-  + \omega_l \cdot \sum_{l \in L} \frac{\Delta_l^2\left( x \right)}
-                                       {\left| L \right|},
-\end{equation}
-де $\Delta_l^2$~---~функція,
-яка перетворює параметри моделі
-на квадрат відхилення її опорних точок від реальних,
-а коефіцієнти $\omega_c$, $\omega_r$ і $\omega_l$
-обираються рівними $1$, $2.5 \cdot 10^{-5}$ і $10$ відповідно.
+
