add algorithm pipeline

--- a/4_overview/30_solution.tex
+++ b/4_overview/30_solution.tex
@@ -1,81 +1,55 @@
-\section{Проблема у розв'язку задачі}
+\section{Пропоновані рішення}
 
-Задача, що розв'язується у згадуваних роботах,
-може бути описана в загальному вигляді як
-\begin{equation}\label{eq:argmin:improper}
-  \left( k^*, \theta^* \right)
-  = \argmin\limits_{k \in K, \theta \in \Theta}
-    E\left( k, \theta \right),
-\end{equation}
-де $k$~---~набір параметрів, що є виходом алгоритму
-(форма та, у більшості випадків, текстура),
-$\theta$~---~набір параметрів,
-що необхідні для генерації моделі, проте не є частиною виходу алгоритму
-(освітлення, матриця повороту, перспективи, переносу тощо).
-Шукаються накращі $k^*$ і $\theta^*$,
-а потім відкидається $\theta^*$ і вважається, що відповіддю є $k^*$.
 
-Такий підхід може здатися логічним.
-Модель обличчя позиціонується максимально близько до того,
-як розташоване реальне обличчя на пред'явленому зображенні.
-Далі шукається найкраща форма (і текстура).
-Вважається, що отримані значення є бажаним результатом,
-бо немає сенсу робити так,
-щоб на вихід впливали ті ділянки зображення, на яких обличчя немає.
-Проте звідки відомо, що обличчя насправді позиціоновано саме так,
-як вказав алгоритм оцінки положення обличчя?
-Також немає гарантії, що тривимірні моделі були розмічені абсолютно точно.
-Додаткову складність додає питання щодо кількості
-і характеру опорних точок,
-що використовуються для отримання приблизного положення,
-які дадуть максимально точний результат.
-Виникають такі ситуації,
-коли одній конфігурації опорніх точок відповідає різне положення обличчя.
-Найпростіший приклад: наявність проекції лише однієї опорної точки
-не дає представлення щодо повороту та розміру обличчя.
+У даній статті описується алгоритм напівавтоматичного 
+створення слайдів на основі відеозапису лекції [1].
+За допомогою наведеного алгоритму можна обробляти відео 
+у режимі реального часу, адже кожна його ітерація потребує 
+лише поточний на попередні кадри. Між кожною парою 
+сусідніх кадрів відео розраховується бінарна маска областей, де 
+потенційно знаходяться рухомі об’єкти. 
 
-Розглянемо конкретну ситуацію, коли підхід \eqref{eq:argmin:improper} є хибним.
-На рис. \ref{fig:argmin:statue-original} зображено модель,
-що була згенерована за допомогою BFM.
-На рис. \ref{fig:argmin:statue-distorted} зображено ту ж саму модель,
-проте до неї було застосовано матрицю перспективи.
-Оскільки матриця перспективи~---~аффінне перетворення, отже оборотне,
-обидва зображення можуть грати роль як отриманого результату,
-так і результату з іншою матрицею перспективи.
-Нехай в кінці роботи алгоритму було отримано зображення
-\ref{fig:argmin:statue-distorted}~---~обличчя кремезної людини
-з широким носом та вилицями і низьким лобом.
-Слідуючи рекомендаціям,
-ми зберігаємо лише параметри форми моделі та відкидаємо отриману матрицю.
-В результаті маємо довгасте обличчя худої людини з високим лобом.
 
-\begin{figure}[h]
-  \centering
-  \begin{subfigure}[b]{0.4\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{images/statue-orig}
-    \caption{Візуалізована модель людського обличчя}
-    \label{fig:argmin:statue-original}
-  \end{subfigure}
-  \begin{subfigure}[b]{0.4\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{images/statue-perspective}
-    \caption{Візуалізація з іншою матрицею перспективи}
-    \label{fig:argmin:statue-distorted}
-  \end{subfigure}
-  \caption{Приклад візуалізації однієї моделі з різними параметрами камери}
+Ті частини зображення, де не було помічено рух, зберігаються до 
+зображення, яке ми в даній роботі називаємо панорамою, тому що 
+це зображення може розширюватись у випадку, коли камера рухається 
+навмисно або хитається через небажаний вплив на неї. 
+Отриману панораму ми порівнюємо з тими панорамами, що було отримано на 
+попередніх кроках, і створюємо новий слайд, якщо було помічено 
+достатню кількість змін.
+
+
+Інформаційна технологія, що реалізує даний алгоритм, працює в 
+напівавтоматичному режимі – вона потребує від користувача введення 
+деяких параметрів. 
+Ці параметри визначають крок, з яким треба обирати кадри для визначення руху, 
+ступінь згладжування маски рухомих об’єктів під час її пошуку, крок 
+між панорамами для перевірки необхідності створення нового 
+слайду та кількість необхідних змін між двома панорамами для створення нового слайду.
+
+
+
+\usetikzlibrary{arrows,positioning,shapes}
+\begin{figure}
+\begin{center}
+\begin{tikzpicture}[node distance=4mm, >=latex',
+ block/.style = {draw, rectangle, minimum height=10mm, minimum width=28mm,align=center},
+rblock/.style = {draw, rectangle, rounded corners=0.5em},
+tblock/.style = {draw, trapezium, minimum height=10mm, 
+                 trapezium left angle=75, trapezium right angle=105, align=center},
+                        ]
+    \node [rblock]                           (video)        {Відео};
+    \node [block, below=of video]            (mov_objects)  {Побудова маски\\ рухомих об’єктів};
+    \node [block, right=of mov_objects]      (pan)          {Побудова панорамами};
+    \node [block, right=of pan]              (denoise)      {Зниження рівня\\ шуму};
+    \node [rblock,above=of denoise]          (slides)       {Слайди};
+
+%% paths (borowed from Harish Kumar)
+    \path[draw,->] (video)         edge    (mov_objects)
+                   (mov_objects)   edge    (pan)
+                   (pan)           edge    (denoise)
+                   (denoise)       edge    (slides)
+                   ;
+\end{tikzpicture}
+\end{center}
 \end{figure}
-
-В такому випадку можна вирішити,
-що перетворення, які з інтуїтивної точки зору змінюють зовнішній вигляд моделі
-(масштаб, перспектива, скіс і таке інше),
-можна зберігати разом із параметрами моделі як вихідний результат.
-Проте не треба забувати, що ці перетворення були внесені в задачу,
-щоб врахувати такі природні фактори,
-як спотворення зображення різними об'єктивами фотокамер (зокрема перспектива).
-Тому такий підхід теж є хибним.
-
-У статті \cite{schlezinger:2013} було доведено,
-що стратегія, яка використовує \eqref{eq:argmin:improper}, є негодящою,
-бо можна знайти іншу стратегію,
-яка буде давати кращі результати при будь-яких значеннях $\theta$.
