--- a/4_overview/main.tex
+++ b/4_overview/main.tex
@@ -2,5 +2,5 @@
 \import{}{05_preface}
 \import{}{10_examples}
 \import{}{20_problem}
-% \import{}{30_solution}
-% \import{}{40_conclusion}
+\import{}{30_solution}
+\import{}{40_conclusion}
