--- a/4_overview/40_conclusion.tex
+++ b/4_overview/40_conclusion.tex
@@ -1,15 +1,8 @@
 \chapterConclusion
 
-Проведено огляд існуючих алгоритмів реконструкції
-з теоретичної точки зору,
-більш детальне дослідження яких наведено у наступних розділах дисертації.
-Запропоновані методи досить складно порівняти з практичної точки зору:
-для цього треба реалізувати їх на одній мові програмування
-та перевірити на одній тестовій виборці на однакових обчислювальних машинах.
-Проте було вказано математичні неточності,
-що були знайдені при вивченні даних методів.
-В результаті аналізу стало зрозуміло,
-що на даний момент
-для просторової реконструкції людського обличчя за одним зображенням
-доцільно використовувати генеративну модель обличчя.
-Цей факт використано в наступному розділі для постановки задачі розпізнавання.
+Проведений аналіз існуючих аналогів технологій оцифровування дошки.
+Більшість алгоритмів працює з малим розширенням відео та не є 
+досить швидкими. Було показано неефективність деяких методів, 
+що застосовуються для прибирання людини біля дошки. 
+Також була зроблена потсановка задачі для досягнення мети.
+Коротко описаний запрпонований алгоритм.
