add beginnig of new chapter

--- a/4_overview/30_solution.tex
+++ b/4_overview/30_solution.tex
@@ -1,7 +1,7 @@
 \section{Пропоновані рішення}
 
 
-У даній статті описується алгоритм напівавтоматичного 
+У даній роботі описується алгоритм напівавтоматичного 
 створення слайдів на основі відеозапису лекції [1].
 За допомогою наведеного алгоритму можна обробляти відео 
 у режимі реального часу, адже кожна його ітерація потребує 
