--- a/index.tex
+++ b/index.tex
@@ -40,6 +40,7 @@
 \import{3_preface/}{symbols.tex}
 \import{3_preface/}{preface.tex}
 \import{4_overview/}{main.tex}
+\import{5_main/}{main.tex}
 
 
 \end{document}
