add min-cut/max-flow algorithm

--- a/5_main/20_annotations.tex
+++ b/5_main/20_annotations.tex
@@ -1,4 +1,4 @@
-\subsection*{Вхід алгоритму}
+\subsection{Вхід алгоритму}
 
 Для опису алгоритму створення панорамних слайдів потрібно визначити 
 вхідні дані та параметри, які буде надавать користувач інформаційної
@@ -9,7 +9,7 @@
 дошка, маркерна дошка, стіна тощо.
 
 Записи - це ті місця дошки, де відбулася зміна кольору, яка тривала 
-відносно довгий час. Важливо зауважити, що ця записи мають бути 
+відносно довгий час. Важливо зауважити, що ці записи мають бути 
 саме у площині дошки, при чому людина яка проходить біля неї не вважається
 зміною кольору, оскільки цей рух був не тривалим.
 
@@ -28,8 +28,110 @@ $P$$\to$$C$, де $P$ - множина координат пікселів, $С$
     P = [1, \ldots ,w]\times[1, \ldots, h], C \subset R
 \end{equation},
 
+Відео \(F\) довжиною \(T\)
+є послідовністю \(\left( F^{i}:i = \overline{1,T} \right)\) кадрів
+\(F^{i}:P \rightarrow C\). Той факт, що піксель з координатою
+\(p \in P\) на кадрі \(F^{i}\) має інтенсивність \(c \in C\),
+позначатимемо \(F_{p}^{i} = c\).
 
-Відео
+
+\subsection{Побудова маски рухомих об'єктів}
+
+Під час лекцій часто виникають такі ситуації, коли викладач затуляє
+собою частину дошки з написами -- наприклад, для запису нового матеріалу
+або щоб видалити старі написи з дошки. Іноді студенти просять викладача
+відійти від дошки, щоб переписати з неї те, що з'явилося на ній лише
+хвилину тому, проте наша програма дозволяє побачити частину дошки, яку
+затулив викладач, якщо перед цим перекритий сегмент було добре видно
+протягом вказаного користувачем часу.
+
+Якщо вирішити проблему прибирання викладача з відео, то студент завжди 
+буде бачити, що відбувається на дошці.
+
+Для вирішення цієї задачі ми будуємо маску рухомих об'єктів,
+щоб потім їх видаляти. Рухомими об'єктами можуть бути викладач, 
+студенти, а також записи, що тільки-но з'явились.
+
+Було запропоновано декілька методів створення маски викладача чи 
+рухомих об'єктів.
+
+\subsection{Алгоритм Бойкова-Колмогорова}
+
+Даний алгоритм є вирішенням задачі знаходження мінімального розрізу графу
+або еквівалентної їй максимального потоку. 
+
+Ведемо позначення:
+% $T$ - множина вузлів, 
+% \tau - множина направлених дуг,
+% $s$ - джерело (початок),
+% $e$ - стік (кінець),
+% $N_t = {t^{'}: tt^{'} \in \tau }$,
+% $P_t = {t^{'}: t^{'}t \in \tau }$,
+% $f$ - потік,
+% $c$ - пропускна здатність,
+
+Задача максимального потоку
+
 \begin{equation}
-    F^i: i = \overline{1,T},  F^i: P \to C
-\end{equation},
+    \sum_{t \in N_s} f_{st} \rightarrow \max_{f: \tau \rightarrow R }
+\end{equation}
+
+З обмеженнями: 
+\begin{equation} 
+    \begin{gathered}
+        \begin{cases}
+            f_{tt^{'}} \ll c_{tt^{'}}, &  \forall tt^{'}  \in \tau , \\
+
+            \sum_{p \in P_t} f_{pt} - \sum_{t^{'} \in N_t} f_{tt^{'}} = 0, & 
+            \forall t \in T \setminus \{s,e\}, \\
+
+            \sum f_{tt^{'}} \geq 0, & \forall tt^{'}  \in \tau
+        \end{cases}
+\end{gathered}
+\end{equation}
+
+Що значать:
+\begin{enumerate}
+    \item 1. Потік має не перевищувати пропускну здатність для всіх ребер;
+    \item 2. Сума потоків, що входять у вузол не повинна змінитись на виході;
+    \item 3. Потік завжди додатній.
+\end{enumerate}
+
+Оригінальне рішення 
+
+\begin{algorithm}
+    \caption{Алгоритм максимального потоку}
+    \begin{algorithmic}
+    \State \textbf{Вхід} Граф, з об'єктами $t \in T$, ребрами $tt^{'}$;
+    \State \textbf{Вихід} $F_{maxflow}$ - значення максимального потоку;
+    \State \textbf{Ініціалізація}: $F_{maxflow} = 0; f_{tt^{'}}^{0} = 0 \forall tt^{'}  \in \tau$.
+    \State \textbf{Поки існує шлях з $s$ в $e$}:    
+    \State \textbf{Крок 1}: Знаходимо шлях від $s$ до $e$.
+    (алгоритм Едмонса-Карпа або Форда Фалкерсона).
+    \State Відвідуємо $t^{'}$ із $t$ якщо:
+            \State \qquad 1. $f_{tt^{'}} \neq   c_{tt^{'}}$;
+            \State \qquad 2. $ \nexists p_{t^{'}}^{i} \Rightarrow  p_{t^{'}}^{i} = t $ (запам'ятали вершину);
+            \State \qquad 3. $ t^{'} \neq s $
+    \State \textbf{Крок 2}: Проходимо по знаданому шляху: 
+            \State \qquad 1. Знаходимо $ \vartriangle f^{i} = \min_{tt^{'} \in \{шлях із s в e \}} $;
+            \State \qquad 2. Змінюємо потік: $ f_{tt^{'}}^{i+1} = f_{tt^{'}}^{i} + \vartriangle f^{i} $;
+            \State \qquad 3. Оновлюємо $F_{maxflow}$: $ F_{maxflow}^{i+1}  = F_{maxflow}^{i} + \vartriangle f^{i} $ ;
+    \end{algorithmic}
+\end{algorithm}
+
+Знайшовши максимальний потік можемо знайти мінімальний зріз:
+Для $\forall t \in T$ знайти $\theta_{t} \in \{0,1\}$
+\begin{algorithm}
+    \caption{Алгоритм пошуку розмітки}
+    \begin{algorithmic}
+    \State \textbf{Вхід}:Граф з насиченими дугами після знаходження максимального потоку.
+    \State \textbf{Вихід}: $\theta$ - розмітка графа.
+    \State Запускаємо пошук в ширину або глибину вже з оновленим графом.
+    \State Поки існує шлях з $s$ в $e$:
+    \State Проходимось по всім об'єктам $ t \in T $:
+    \State \qquad Якщо $c_{tt^{'}} \geqslant f_{tt^{'}}$, і $c_{tt^{'}} \geqslant 0$
+    $\Rightarrow \theta_{t^{'}} = 1 $,
+    \State \qquad інакше $\theta_{t^{'}} = 0 $
+
+    \end{algorithmic}
+\end{algorithm}
