--- a/index.tex
+++ b/index.tex
@@ -8,6 +8,8 @@
 \usepackage{import}
 \usepackage{tikz}
 
+\usepackage{algorithm}
+\usepackage{algpseudocode}
 
 
 \NewTotalDocumentCounter{totalfigures}
