--- a/index.tex
+++ b/index.tex
@@ -11,6 +11,10 @@
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 
+\usepackage{cleveref}
+\captionsetup[subfigure]{subrefformat=simple,labelformat=simple}
+\renewcommand\thesubfigure{(\alph{subfigure})}
+
 
 \NewTotalDocumentCounter{totalfigures}
 \NewTotalDocumentCounter{totalbibitems}
