add advs/diss of bk algorithm

--- a/4_overview/30_solution.tex
+++ b/4_overview/30_solution.tex
@@ -2,7 +2,7 @@
 
 
 У даній роботі описується алгоритм напівавтоматичного 
-створення слайдів на основі відеозапису лекції [1].
+створення слайдів на основі відеозапису лекції (рис. \ref{fig:pipeline}).
 За допомогою наведеного алгоритму можна обробляти відео 
 у режимі реального часу, адже кожна його ітерація потребує 
 лише поточний на попередні кадри. Між кожною парою 
@@ -52,4 +52,7 @@ tblock/.style = {draw, trapezium, minimum height=10mm,
                    ;
 \end{tikzpicture}
 \end{center}
+\caption{Процедура створення панорамних слайдів
+\label{fig:pipeline}
+}
 \end{figure}
