--- a/5_main/20_annotations.tex
+++ b/5_main/20_annotations.tex
@@ -64,7 +64,7 @@ $P$$\to$$C$, де $P$ - множина координат пікселів, $С$
 \subsection{Задача знаходження Min-Cut/Max-Flow}
 
 Ведемо позначення:
-$T$ - множина вузлів, 
+$T$ - множина вузлів графу (рис. \ref{fig:graph_example}), 
 $\tau$ - множина направлених дуг,
 $s$ - джерело (початок),
 $e$ - стік (кінець),
@@ -165,7 +165,7 @@ $c$ - пропускна здатність,
         ($t$, $t^{'}$). Для кожного такого $t$ перевіряємо чи шлях з $t$ в $s$ містить сироти
         включаючи $t$. Якщо сирот не знайшли, то $t$ - батько  $t^{'}$. \\
         Якщо не вдається знайти батька, ми позначаємо вершину $t^{'}$ як \textit{вільну}, а всіх
-        дітей $t^{'}$ сиротами. Після цього ми оброблюємо залишкові ребра ($(t,t^{'})$) і для кожного $t$ в $S$ позначаємо
+        дітей $t^{'}$ сиротами. Після цього ми оброблюємо залишкові ребра $(t,t^{'})$ і для кожного $t$ в $S$ позначаємо
         $t$ - активною. 
 \end{enumerate}
 
@@ -173,10 +173,12 @@ $c$ - пропускна здатність,
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.3\textwidth]{images/graph_cut}
-    \caption{Приклад графу-решітки з мінімальним розрізом}
-    \label{fig:graph_example}
+    \caption{Приклад графу-решітки з мінімальним розрізом
+    \label{fig:graph_lattice}
+    }
 \end{figure}
 
-Найбільша перевага даного алгоритму це те що, він працює швидше та краще на графах-решітках.
+Найбільша перевага даного алгоритму це те що, він працює швидше та краще на графах-решітках 
+(рис.\ref{fig:graph_lattice}).
 Оскільки саме таку структуру ми використовуємо в алгоритмі Б-К для отримання маски рухомих 
 об'єктів це дає змогу оброблювати кадри відео досить шивдко.
