--- a/index.tex
+++ b/index.tex
@@ -6,14 +6,21 @@
 \usepackage{pdfpages}
 \usepackage{xassoccnt}
 \usepackage{import}
-\usepackage{tikz}
 
+% to insert geometric figures
+\usepackage{tikz}
+% to insert algorithms
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 
+% to insert references for subfigures
 \usepackage{cleveref}
 \captionsetup[subfigure]{subrefformat=simple,labelformat=simple}
 \renewcommand\thesubfigure{(\alph{subfigure})}
+
+% to insert code 
+\usepackage{listings}
+
 
 
 \NewTotalDocumentCounter{totalfigures}
