add sift description

--- a/5_main/20_annotations.tex
+++ b/5_main/20_annotations.tex
@@ -109,7 +109,7 @@ $c$ - пропускна здатність,
 
 Оригінальний алгоритм:
 
-\begin{algorithm}
+\begin{algorithm}[H]
     \caption{Алгоритм Min-Cut/Max-Flow}
     \begin{algorithmic}
     \State \textbf{Вхід:} Граф, з об'єктами $t \in T$, ребрами $tt^{'}$
