--- a/5_main/30_bk_algorithm_applying.tex
+++ b/5_main/30_bk_algorithm_applying.tex
@@ -116,8 +116,12 @@ $\Gamma \subset P^{2}$ сусідніх пікселів. У даній робо
 \textbf{Недоліки методу:}
 \begin{enumerate}
     \item Оскільки даний метод локалізує рух на кадрах відео, то коли 
-    рухається камера, відповідно практично все що в кадрі стає рухомим об'єктом 
-    \ref{fig:seminar:bad_example}.
+    рухається камера, відповідно практично все що в кадрі стає рухомим об'єктом (рис. 
+    \ref{fig:seminar:bad_example}). Це може давати дефекти на панорамних знімках. В 
+    розділі № описано як була поборена дана проблема.
+    \item Якщо викладач практично не рухається довгий час, відповідно не потрапляє
+    на маску рухомих об'єктів, то він може потрапити на 
+    результуючий панорамний знімок.
 \end{enumerate}
 
 % Межкафедральный семинар (семинар), Райгородский А. М., 29.03.2022г.
@@ -156,7 +160,7 @@ $\Gamma \subset P^{2}$ сусідніх пікселів. У даній робо
         }
     \end{subfigure}
 
-    \caption{Приклад отримання поганої маски
+    \caption{Приклад отримання поганої маски під час руху камери
     \label{fig:seminar:bad_example}
     }
 \end{figure}
