complete homography description

--- a/5_main/50_frames_matching.tex
+++ b/5_main/50_frames_matching.tex
@@ -159,3 +159,81 @@
             \label{fig:swift6}
         \end{figure}
 \end{enumerate}
+
+\subsection{Знаходження відповідних точок зображень}
+
+Дано два кадри \(F^{i}\) та \(F^{i + s}\). Нехай ми маємо набір
+\(\left\{ \left( p_{j}^{i},p_{j}^{i + s} \right):j = \overline{1,4} \right\}\)
+пар координат відповідних точок, де
+\(p_{j}^{i} \in R^{2} \times \left\{ 1 \right\}\) -- координата пікселя
+\(p\) на кадрі номер \(i\),
+\(p_{j}^{i + s} \in R^{2} \times \left\{ 1 \right\}\) -- відповідна їй
+координата на кадрі номер \(i + s\). Відповідними точками є ті, що є
+проекціями однієї і тієї ж точки у просторі.
+
+Нехай $D_i$ та $D_{i+s}$ множина дескрипторів кадрів \(F^{i}\) та \(F^{i + s}\)
+відповідно. Мета - отримати множину $D^{matches}_{i,i+s}$, що містить в собі відповідні дескриптори.
+
+
+Був використаний \textbf{Brute Force Matcher} для знаходження відповідних точок.
+\begin{algorithm}[H]
+    \caption{Алгоритм Brute Force Matcher}
+    \begin{algorithmic}
+    \State \textbf{Вхід:} Множини дескрипторів $D_i$ та $D_{i+s}$
+    \State \textbf{Вихід:} Множина відповідних дескрипторів $M_{i,i+s}$
+    \State $\forall i \in D_i$:
+    \State  \qquad $h^{min}_{i,j} \gets 0$
+    \State  \qquad  $\forall j \in D_{i+s}$:
+    \State  \qquad \qquad  $h_{i,j} \gets distance(i,j)$
+    \State  \qquad \qquad  Якщо {$h_{i,j} \leq h^{min}_{i,j}$} 
+    \State  \qquad \qquad  \qquad $j$ є відповідним  дескриптором для $i$    
+    \end{algorithmic}
+\end{algorithm}
+
+Тобто для кожного дескриптора першого зображення шукаємо найближчий на другому.
+Маючи список відповідних дескрипторів можна знайти відповідні точки на обох зображеннях.
+
+\subsection{Знаходження гомографії за допомогою RANSAC методу}
+
+Гомографія - матриця, що описує зв'язок точок між двома зображеннями плоскої поверхні 
+називається.
+
+\begin{equation}
+    H = 
+    \begin{bmatrix}
+        h_{11} & h_{12} & h_{13}\\
+        h_{21} & h_{22} & h_{13}\\
+        h_{31} & h_{32} & h_{33}
+        \end{bmatrix}
+    \label{eq:h_matrix}
+\end{equation}
+
+\begin{equation}
+    H^{i} \cdot p_{j}^{i + s} = c \cdot p_{j}^{i},\quad\forall i = \overline{1,4\ }
+    \label{eq:h_connection}
+\end{equation}
+
+
+Рівняння \ref{eq:h_connection} можна легко розв'язати відносно невідомої гомографії
+\(H^{i}\). Цю матрицю можна використовувати для компенсації руху камери
+-- ми застосовуємо її до координат пікселів кадру номер \(i + s\), після
+чого точки зображення, отриманого в результаті перетворення, мають ті ж
+координати, що й відповідні їм точки на кадрі під номером \(i\). Якщо
+отримані координати не цілочисельні, їх можна округлити, що не матиме
+значного негативного впливу на якість результату.
+
+Знаходження $H$ вимагає знаходження всіх 9 параметрів матриці \ref{eq:h_matrix}.
+Візьмемо пару відповідних точок $T$ та $T'$:
+$T = ((x_1,y_1), (x_2,y_2), (x_3,y_3), (x_4,y_4))$, 
+$T' = ((x'_1,y'_1), (x'_2,y'_2), (x'_3,y'_3), (x'_4,y'_4))$ 
+
+
+
+
+Для оцінки гомографії використовували RANSAC \cite{Fischler1981RandomSC}.
+Позначимо множину \(M^{i}\) усіх знайдених відповідних точок між кадрами
+\(F^{i}\) і \(F^{i + s}\). Користувач вводить рівень \(\varepsilon > 0\)
+дозволеної похибки розрахунків -- що менше, то краще, проте тим довше
+буде працювати алгоритм пошуку гомографії.
+
+
